# dependency-container

./: CONTRIBUTING.md  Makefile  README.md  duties.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
scripts/: gen_credits.py
src/dependency_container/: __init__.py  container.py  fastapi.py  route.py
src/dependency_container/faststream/: nats.py  redis.py
src/faddi/: __init__.py  container.py  routing.py
tests/: __init__.py  test_container.py  test_redis.py  test_routing.py
